h1 header in index.html update

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <main>
         <header id="top">
-            <h1 class="company-name">megapracownia<br>Łukasz Frągnowski</h1>
+            <h1 class="company-name">megapracownia<br>Łukasz Frągnowski - strona testowa WTF</h1>
             <p>domowa strona testowa</p>
 
         </header>
