--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
   <body>
     <header class="header">
       <nav class="navigation">
-        <a class="navigation__link navigation__link--selected" href="index.html"
-          >Strona główna</a
-        >
+        <a class="navigation__link navigation__link--selected">Strona główna</a>
         <a class="navigation__link" href="1_html.html">html</a>
         <a class="navigation__link" href="2_css.html">css</a>
         <a class="navigation__link" href="3_js.html">js</a>
+        <img
+          src="images/megapracownia_logotyp_300dpi_full.png"
+          class="header__logo"
+          alt="megapracownia"
+        />
       </nav>
     </header>
 
@@ -27,7 +30,7 @@
         <h1 class="company-name">
           Łukasz Frągnowski<br />domowa strona testowa
         </h1>
-        <p class="company-name__motto">
+        <p class="company-name__subtext">
           domowa strona testowa domowa strona testowa domowa strona testowa
           domowa strona testowa domowa strona testowa domowa strona testowa
         </p>
