lists and table added, general cleaning

--- a/1_html.html
+++ b/1_html.html
@@ -24,7 +24,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="main">
       <header class="header" id="top">
         <h1 class="company-name">megapracownia<br />Łukasz Frągnowski</h1>
         <p class="company-name__subtext">podstrona 1 - html</p>
@@ -52,7 +52,7 @@
     <footer class="footer" id="footer">
       <p class="article__description">
         Projekt wykonany w ramach WTF (praca domowa, tydzień drugi)
-        <a href="#top">TEST wróć na górę strony TEST</a>
+        <a class="article__description--link" href="#top">TEST wróć na górę strony TEST</a>
       </p>
     </footer>
   </body>
