--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>megapracownia</title>
+    <link href="normalize.css" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
@@ -27,9 +28,10 @@
 
     <main class="main">
       <header class="header" id="top">
-        <h1 class="company-name">
+        <h1 class="company-name main__header--js">
           Łukasz Frągnowski<br />domowa strona testowa
         </h1>
+        <button class="action--js">Zmień nagłówek</button>
         <p class="company-name__subtext">
           domowa strona testowa domowa strona testowa domowa strona testowa
           domowa strona testowa domowa strona testowa domowa strona testowa
