added hamburger menu for mobile, js code, css modification for mobile and some index modifications to make it works

--- a/1_html.html
+++ b/1_html.html
@@ -26,7 +26,7 @@
     </header>
 
     <main class="main">
-      <header class="header" id="top">
+      <header class="main__header" id="top">
         <h1 class="company-name">megapracownia<br />Łukasz Frągnowski</h1>
         <p class="company-name__subtext">podstrona 1 - html</p>
       </header>
