--- a/index.html
+++ b/index.html
@@ -10,27 +10,31 @@
 
   <body>
     <header class="header">
-      <nav class="navigation">
+      <button class="hamburger hamburger--js" aria-label="Otwórz menu">&#9776;</button>
+
+      <nav class="navigation navigation--js">
         <a class="navigation__link navigation__link--selected">Strona główna</a>
         <a class="navigation__link" href="1_html.html">html</a>
         <a class="navigation__link" href="2_css.html">css</a>
         <a class="navigation__link" href="3_js.html">js</a>
-        <img
-          src="images/megapracownia_logotyp_300dpi_full.png"
-          class="header__logo"
-          alt="megapracownia"
-        />
       </nav>
+
     </header>
 
     <!-- na potrzeby pracy domowej  -->
     <div class="empty empty--js"></div>
 
     <main class="main">
-      <header class="header" id="top">
+      <header class="main__header" id="top">
+        <!-- <img
+        src="images/megapracownia_logotyp_300dpi_full.png"
+        class="main__header--logo"
+        alt="megapracownia"
+      /> -->
         <h1 class="company-name main__header--js">
           Łukasz Frągnowski<br />domowa strona testowa
         </h1>
+
         <button class="action--js">Zmień nagłówek</button>
         <p class="company-name__subtext">
           domowa strona testowa domowa strona testowa domowa strona testowa
