added grid to index section and hamburger to 1_html site

--- a/1_html.html
+++ b/1_html.html
@@ -10,19 +10,15 @@
 
   <body>
     <header class="header">
-      <nav class="navigation">
-        <a class="navigation__link" href="index.html"
-          >Strona główna</a
-        >
-        <a class="navigation__link navigation__link--selected href="1_html.html">html</a>
+      <button class="hamburger hamburger--js" aria-label="Otwórz menu">&#9776;</button>
+
+      <nav class="navigation navigation--js">
+        <a class="navigation__link" href="index.html">Strona główna</a>
+        <a class="navigation__link navigation__link--selected">html</a>
         <a class="navigation__link" href="2_css.html">css</a>
         <a class="navigation__link" href="3_js.html">js</a>
-        <img
-          src="images/megapracownia_logotyp_300dpi_full.png"
-          class="header__logo"
-          alt="megapracownia"
-        />
       </nav>
+
     </header>
 
     <main class="main">
