--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
 
     </header>
 
-    <!-- na potrzeby pracy domowej  -->
-    <div class="empty empty--js"></div>
 
     <main class="main">
       <header class="main__header" id="top">
@@ -41,6 +39,10 @@
           domowa strona testowa domowa strona testowa domowa strona testowa
         </p>
       </header>
+
+      
+    <!-- na potrzeby pracy domowej  -->
+    <div class="empty empty--js"></div>
 
       <section class="section">
         <h2 class="article__title">Kim jestem?</h2>
@@ -63,7 +65,7 @@
         </p>
       </section>
 
-      <section class="section">
+      <section class="section section--grid">
         <h2 class="article__title">Notatki z WTF: Co ten frontend</h2>
 
         <article class="article">
