--- a/1_html.html
+++ b/1_html.html
@@ -52,5 +52,6 @@
         <a class="article__description--link" href="#top">TEST wróć na górę strony TEST</a>
       </p>
     </footer>
+    <script src="main.js"></script>
   </body>
 </html>
