hamburger menu script moved to another file

--- a/1_html.html
+++ b/1_html.html
@@ -52,6 +52,8 @@
         <a class="article__description--link" href="#top">TEST wróć na górę strony TEST</a>
       </p>
     </footer>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
+    <script src="menu.js"></script>
+
   </body>
 </html>
