--- a/index.html
+++ b/index.html
@@ -217,6 +217,8 @@
         >
       </p>
     </footer>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
+    <script src="menu.js"></script>
+
   </body>
 </html>
