hamburger in all sites

--- a/1_html.html
+++ b/1_html.html
@@ -10,15 +10,17 @@
 
   <body>
     <header class="header">
-      <button class="hamburger hamburger--js" aria-label="Otwórz menu">&#9776;</button>
+      <button class="hamburger hamburger--js" aria-label="Otwórz menu">
+        &#9776;
+      </button>
 
       <nav class="navigation navigation--js">
         <a class="navigation__link" href="index.html">Strona główna</a>
         <a class="navigation__link navigation__link--selected">html</a>
         <a class="navigation__link" href="2_css.html">css</a>
         <a class="navigation__link" href="3_js.html">js</a>
+        <a class="navigation__link" href="4_formularze.html">formularze</a>
       </nav>
-
     </header>
 
     <main class="main">
@@ -49,11 +51,12 @@
     <footer class="footer" id="footer">
       <p class="article__description">
         Projekt wykonany w ramach WTF (praca domowa, tydzień drugi)
-        <a class="article__description--link" href="#top">TEST wróć na górę strony TEST</a>
+        <a class="article__description--link" href="#top"
+          >TEST wróć na górę strony TEST</a
+        >
       </p>
     </footer>
     <!-- <script src="main.js"></script> -->
     <script src="menu.js"></script>
-
   </body>
 </html>
