--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 
   <body>
     <header class="header">
-      <button class="hamburger hamburger--js" aria-label="Otwórz menu">&#9776;</button>
+      <button class="hamburger hamburger--js" aria-label="Otwórz menu">
+        &#9776;
+      </button>
 
       <nav class="navigation navigation--js">
         <a class="navigation__link navigation__link--selected">Strona główna</a>
         <a class="navigation__link" href="1_html.html">html</a>
         <a class="navigation__link" href="2_css.html">css</a>
         <a class="navigation__link" href="3_js.html">js</a>
+        <a class="navigation__link" href="4_formularze.html">formularze</a>
       </nav>
-
     </header>
-
 
     <main class="main">
       <header class="main__header" id="top">
@@ -40,9 +41,8 @@
         </p>
       </header>
 
-      
-    <!-- na potrzeby pracy domowej  -->
-    <div class="empty empty--js"></div>
+      <!-- na potrzeby pracy domowej  -->
+      <div class="empty empty--js"></div>
 
       <section class="section">
         <h2 class="article__title">Kim jestem?</h2>
@@ -219,6 +219,5 @@
     </footer>
     <!-- <script src="main.js"></script> -->
     <script src="menu.js"></script>
-
   </body>
 </html>
