npm node-sass instaled

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
         </p>
       </section>
 
-      <section class="section section--grid">
+      <section class="section">
+        <div class="grid">
+
         <h2 class="article__title">Notatki z WTF: Co ten frontend</h2>
 
         <article class="article">
@@ -208,6 +210,7 @@
           </div>
         </article>
       </section>
+    </div>
     </main>
     <footer class="footer" id="footer">
       <p class="article__description">
