--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <h1 class="company-name main__header--js">
           Łukasz Frągnowski<br />domowa strona testowa
         </h1>
+        <p class="test">test <span class="test__special">test </span>test</p>
 
         <button class="action--js">Zmień nagłówek</button>
         <p class="company-name__subtext">
